--- a/WCSTrainer/Pages/Skills/Details.cshtml
+++ b/WCSTrainer/Pages/Skills/Details.cshtml
@@ -6,85 +6,103 @@
 @inject UserManager<UserAccount> UserManager
 
 <div class="panel">
-   <div class="body">
-      <partial name="_Sidebar" />
-      <div class="properties">
-         <div class="user-form">
-            <div id="contentToPrint" class="print-block">
-               <p class="title">Skill #@Model.Skill.Id</p>
-               <div class="field-container">
-                  <div class="title-row">
-                     <p class="title">Details</p>
-                  </div>
-                  <div class="text-group">
-                     <p class="title">Name</p>
-                     <p class="info">@Model.Skill.Name</p>
-                  </div>
-                  <div class="text-group">
-                     <p class="title">Description</p>
-                     <p class="info">@Model.Skill.Description</p>
-                  </div>
-                  <div class="text-group">
-                     <p class="title">Included Lessons</p>
-                     <div class="info">
-                        @foreach (var lesson in Model.Skill.Lessons) {
-                           <a href="/Lessons/Details?id=@lesson.Id" class="pill">@lesson.Name</a>
-                        }
-                     </div>
-                  </div>
-                  <div class="text-group">
-                     <p class="title">Currently Learning</p>
-                     <div class="info">
-                        @foreach (var person in Model.Skill.Employees) {
-                           bool isActive = false;
-                           foreach (var orderAsTrainee in person.TrainingOrdersAsTrainee) {
-                              if (orderAsTrainee.ParentSkillId == Model.Skill.Id) {
-                                 if (orderAsTrainee.Status == "Active" || orderAsTrainee.Status == "Approving") {
-                                    isActive = true;
-                                 }
-                              }
-                           }
-                           if (isActive) {
-                              <a href="/Employees/Details?id=@person.Id" class="pill">@person.FirstName @person.LastName</a>
-                           }
-                        }
-                     </div>
-                  </div>
-                  <div class="text-group">
-                     <p class="title">Learning Completed</p>
-                     <div class="info">
-                        @foreach (var person in Model.Skill.Employees) {
-                           bool isActive = false;
-                           foreach (var orderAsTrainee in person.TrainingOrdersAsTrainee) {
-                              if (orderAsTrainee.ParentSkillId == Model.Skill.Id) {
-                                 if (orderAsTrainee.Status == "Active" || orderAsTrainee.Status == "Approving") {
-                                    isActive = true;
-                                 }
-                              }
-                           }
-                           if (!isActive) {
-                              <a href="/Employees/Details?id=@person.Id" class="pill">@person.FirstName @person.LastName</a>
-                           }
-                        }
-                     </div>
-                  </div>
-               </div>
+  <div class="body">
+    <partial name="_Sidebar" />
+    <div class="properties">
+      <div class="user-form">
+        <div id="contentToPrint" class="print-block">
+          <p class="title">Skill #@Model.Skill.Id</p>
+          <div class="field-container">
+            <div class="title-row">
+              <p class="title">Details</p>
             </div>
-            <br />
-            <div class="btn-container">
-               <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@Model.Skill.Id">Edit Skill</a>
-               <a class="btn bg-btn btnBlue" asp-page="./Assign" asp-route-id="@Model.Skill.Id">Assign</a>
-               @if (SignInManager.IsSignedIn(User)) {
-                  var user = await UserManager.GetUserAsync(User);
-                  if (user != null) {
-                     var isOwner = await UserManager.IsInRoleAsync(user, "owner");
-                     if (isOwner) {
-                        <a class="btn bg-btn btnRed" asp-page="./Delete" asp-route-id="@Model.Skill.Id">Delete</a>
-                     }
+            <div class="text-group">
+              <p class="title">Name</p>
+              <p class="info">@Model.Skill.Name</p>
+            </div>
+            <div class="text-group">
+              <p class="title">Description</p>
+              <p class="info">@Model.Skill.Description</p>
+            </div>
+            <div class="text-group">
+              <p class="title">Included Lessons</p>
+              <div class="info">
+                @foreach (var lesson in Model.Skill.Lessons)
+                {
+                  <a href="/Lessons/Details?id=@lesson.Id" class="pill">@lesson.Name</a>
+                }
+              </div>
+            </div>
+            <div class="text-group">
+              <p class="title">Currently Learning</p>
+              <div class="info">
+                <div class="pills-container">
+                  @foreach (var person in Model.Skill.Employees)
+                  {
+                    bool isActive = false;
+                    foreach (var orderAsTrainee in person.TrainingOrdersAsTrainee)
+                    {
+                      if (orderAsTrainee.ParentSkillId == Model.Skill.Id)
+                      {
+                        if (orderAsTrainee.Status == "Active" || orderAsTrainee.Status == "Approving")
+                        {
+                          isActive = true;
+                        }
+                      }
+                    }
+                    if (isActive)
+                    {
+                      <a href="/Employees/Details?id=@person.Id" class="pill">@person.FirstName @person.LastName</a>
+                    }
                   }
-               }
+                </div>
+              </div>
             </div>
-         </div>
+            <div class="text-group">
+              <p class="title">Learning Completed</p>
+              <div class="info">
+                <div class="pills-container">
+                  @foreach (var person in Model.Skill.Employees)
+                  {
+                    bool isActive = false;
+                    foreach (var orderAsTrainee in person.TrainingOrdersAsTrainee)
+                    {
+                      if (orderAsTrainee.ParentSkillId == Model.Skill.Id)
+                      {
+                        if (orderAsTrainee.Status == "Active" || orderAsTrainee.Status == "Approving")
+                        {
+                          isActive = true;
+                        }
+                      }
+                    }
+                    if (!isActive)
+                    {
+                      <a href="/Employees/Details?id=@person.Id" class="pill">@person.FirstName @person.LastName</a>
+                    }
+                  }
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="btn-container">
+          <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@Model.Skill.Id">Edit Skill</a>
+          <a class="btn bg-btn btnBlue" asp-page="./Assign" asp-route-id="@Model.Skill.Id">Assign</a>
+          @if (SignInManager.IsSignedIn(User))
+          {
+            var user = await UserManager.GetUserAsync(User);
+            if (user != null)
+            {
+              var isOwner = await UserManager.IsInRoleAsync(user, "owner");
+              if (isOwner)
+              {
+                <a class="btn bg-btn btnRed" asp-page="./Delete" asp-route-id="@Model.Skill.Id">Delete</a>
+              }
+            }
+          }
+        </div>
       </div>
-   </div>
+    </div>
+  </div>
 </div>
