--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -425,6 +425,14 @@ nav {
 							gap: 5px;
 							flex-wrap: wrap;
 						}
+						.panel .body .properties .user-form .field-container .text-group .info .pills-container {
+							display: flex;
+							flex-wrap: wrap;
+							font-size: 16px;
+							width: 100%;
+							gap: 1px;
+							flex-direction: row;
+						}
 
 						.panel .body .properties .user-form .field-container .text-group .info img {
 							display: flex;
